--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class='container'>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collaspe" data-target="#main-nav-collaspe">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'SaaS', root_path, class: 'navbar-brand' %>
+    </div>
+    
+    <div class="collaspe navbar-collaspe" id="main-nav-collaspe">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "About", "#" %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+    
+  </div>
+</nav>
 
 <%= yield %>
 
